--- a/src/index.less
+++ b/src/index.less
@@ -3,7 +3,14 @@
 @tailwind utilities;
 
 html, body {
+  font-family: 'BigBlueTerm';
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+// 字体
+@font-face {
+  font-family: 'BigBlueTerm';
+  src: url(/fonts/BigBlueTerm.ttf);
 }
